updated readme, env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+#PORT on which your server to run
+PORT=
+
 # YAPILY_APP_UUID: Your unique Yapily Application UUID used to identify your app in API requests.
 # You need to register your app with Yapily to get this value.
 YAPILY_APP_UUID=
